# tfscreen

./: LICENSE  README.rst  environment.yml  pyproject.toml  wipe.sh
notebooks/: 2025-08-27_calibration.json  calculate_fitness.ipynb  calibrate-growth.ipynb  input.yaml  lac_model_behavior.ipynb  simulate-problems.ipynb  simulate-screen.ipynb
notebooks/input/: ddG.xlsx  ensemble.xlsx  raw-compiled-experiments.xlsx
notebooks/tfscreen-walkthrough/: 2025-08-27_calibration.json  ddG_mwc_dimer.xlsx  demonstration.yaml  tfscreen-walkthrough.ipynb
src/tfscreen/: __init__.py  __version__.py  build_condition_dataframe.py  build_condition_dataframes.py  cell_growth_moves.py  data.py  generate_libraries.py  generate_phenotypes.py  growth_with_selection.py  initialize_population.py  pheno_to_growth.py  sequence_and_collate.py  sequence_conditions.py  simulate_growth.py  transform_and_mix.py
src/tfscreen/analyze/: __init__.py  estimate_growth_rates.py  estimate_theta.py
src/tfscreen/calibration/: __init__.py  calibrate.py  core.py  io.py  plot_calibration.py
src/tfscreen/fitting/: __init__.py  gee.py  glm.py  gls.py  kalman_filter.py  kf.py  linear_regression.py  matrix_nls.py  matrix_wls.py  nls.py  ols.py  ukf.py  ukf_lin.py  wls.py
src/tfscreen/simulate/: __init__.py  build_condition_dataframes.py  build_sample_dataframes.py  cell_growth_moves.py  generate_libraries.py  generate_phenotypes.py  initialize_population.py  load_simulation_config.py  run_simulation.py  sequence_conditions.py  sequence_samples.py  simulate_growth.py  transform_and_mix.py
(+18 files in other folders)
